# superconductivity-identifier

./: .gitignore  pyproject.toml
notebooks/: feature_correlations.ipynb  full_linear_model.ipynb  polynomial_rfe.ipynb  selected_linear_model.ipynb  supercond_notebook.ipynb  xgboost.ipynb
